--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,40 +1,63 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Acme|Caveat+Brush" rel="stylesheet">
     <title>Edward Walsh</title>
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
+    <div class="topMain">
     <header>
       <p>Edward Walsh</p>
-      <a href="#">work</a>
+      <a href="#work">work</a>
     </header>
-    <div class="container">
+      <div class="container">
       <main>
-      <p> lets see</p>
+        <p>&lt;front-end developer&gt;</p>
+        <img id ="moi3" src="images/moi3.png">
       </main>
       <aside>
-        <p> < front-end developer ></p>
-        <p> < connect > </p>
+        <p>&lt;connect&gt;</p>
         <div class="socialMedia">
-          <a href="#"><img src="images/git.png"></a>
-          <a href="#"><img src="images/facebook.png" id="facebookImg"></a>
-          <a href="#"><img src="images/twitter.png" id="twitterImg"></a>
-          <a href="mailto:epwalsh77@gmail.com"><img src="images/email.png" id="emailImg"></a>
-        <p> < / connect > </p>
-        <p> < skills > </p>
+          <a href="https://github.com/ep2677" target="_blank"><img src="images/git.png"></a>
+          <a href="https://www.facebook.com/eddie.walsh.313" target="_blank"><img src="images/facebook.png" id="facebookImg"></a>
+          <a href="https://twitter.com/ep2677" target="_blank"><img src="images/twitter.png" id="twitterImg"></a>
+          <a href="mailto:epwalsh77@gmail.com" target="_blank"><img src="images/email.png" id="emailImg"></a>
+        <p>&lt;/connect&gt;</p>
+        <p>&lt;skills&gt;</p>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Photoshop</li>
+        </ul>
+        <p>&lt;/skills&gt;</p>
         </div>
       </aside>
-    </div>
-    <div class="container">
-      <div class="work">
-      <a href="#"><img src="images/calculator2.jpg" class="workImage">
-      <span class="title">
-        <p>JavaScript Calculator</p>
-      </span>
-      </a>
       </div>
     </div>
+    <div class="bottomMain">
+      <h1 id ="work"> Work </h1>
+      <div class="work">
+        <a href="http://chess-master-aaron-55076.bitballoon.com/" target="_blank"><img src="images/calculator2.jpg" class="workImage"></a>
+          <span class="title">
+            <p>JavaScript Calculator</p>
+          </span>
+      </div>
+      <div class="work">
+        <a href="#" target="_blank"><img src="images/rocco.png" class="workImage"></a>
+        <span class="title">
+          <p>Rocco Redesign</p>
+        </span>
+      </div>
+      <div class="work">
+        <a href="https://bikeberlin77.herokuapp.com/" target="-blank"><img src="images/rails.png" class="workImage"></a>
+          <span class="title">
+            <p>Rails App</p>
+          </span>
+      </div>
+    </div>
+    <footer>
+      <p> Edward Walsh/Rochester, NY</p>
+    </footer>
   </body>
 </html>
