--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Acme|Caveat+Brush" rel="stylesheet">
   <title>Edward Walsh</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons||Hammersmith+One">
   <link href="css/styles.css" rel="stylesheet">
+  <title>Edward Walsh</title>
 </head>
 <body>
   <div class="topMain">
