--- a/index.html
+++ b/index.html
@@ -1,46 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Acme|Caveat+Brush" rel="stylesheet">
-  <title>Edward Walsh</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons||Hammersmith+One">
-  <link href="css/styles.css" rel="stylesheet">
-  <title>Edward Walsh</title>
-</head>
-<body>
-  <div class="topMain">
-    <header>
-      <p>Edward Walsh</p>
-    </header>
-    <main>
-        <div class="mainLeft">
-          <p>&lt;front-end developer&gt;</p>
-          <img id ="moi3" src="images/moi3.png">
-          <div id="socialMediaIcons">
-              <a href="https://github.com/ep2677" target="_blank"><img src="images/git.png" class="socialMediaImg"></a>
-              <a href="https://www.facebook.com/eddie.walsh.313" target="_blank"><img src="images/facebook.png" class="socialMediaImg"></a>
-              <a href="https://twitter.com/ep2677" target="_blank"><img src="images/twitter.png" class="socialMediaImg"></a>
-              <a href="mailto:epwalsh77@gmail.com" target="_blank"><img src="images/email.png" class="socialMediaImg"></a>
-            </div>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="css/style.css" rel="stylesheet">
+        <title>Edward Walsh</title>
+    </head>
+    <body>
+        <div id="landing">
+        <header>
+            <li>Edward Walsh</li>
+           <ul>
+               <li><a href="#portfolio"><span>Projects</span></a></li>
+               <li><a id="socialLink" href="#"><span>Social</span></a></li>
+           </ul>
+        </header>
+        <div id="socialMediaIcons">
+            <a href="https://github.com/ep2677" target="_blank"><img src="images/git.png" class="socialMediaImg"></a>
+            <a href="https://twitter.com/ep2677" target="_blank"><img src="images/twitter.png" class="socialMediaImg"></a>
+            <a href="mailto:epwalsh77@gmail.com" target="_blank"><img src="images/email.png" class="socialMediaImg"></a>
         </div>
-      <div class="mainRight"> 
-        <p> Front-end developer skilled in : 
-        <br>CSS, SASS, HTML, javascript, jquery, photoshop, git, bootstrap, flex box... </p>
-        <p>Always working on new skills, currently learning React.js</p>
-        <p> Feel free to contact me and checkout my portfolio below</p>
-        <a href="#portfolio2">portfolio</a><br>
-        <img id="arrow" src="images/arrow.png"> 
-      </div>
-    </main>
-    <img id="roc" src="images/roc4.png">
-  </div>
-  <div id="portfolio2">
-    <h2 class="title"> Portfolio</h2>
-  </div>
-  <footer>
-    <p> Edward Walsh / Rochester, NY</p>
-  </footer>
-  <script src="js/work.js" type="text/javascript"></script>
-</body>
+            <h3> Hello, My name is Edward Walsh.<br/>I am a front end developer</h3>
+            
+            <img id="mainPhoto" src="images/me3.jpg">
+                
+    </div>
+        <div id="portfolio">
+            <h3>Portfolio</h3>
+
+        </div>
+        <script src="work.js"></script>
+    <footer>
+        <h4>&copy Edward Walsh 2018 </h4>
+    </footer>
+    </body>
 </html>
