--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
             <li>Edward Walsh</li>
            <ul>
-               <li><a href="#portfolio"><span>Projects</span></a></li>
+               <li><a href="#portfolio"><span>Portfolio</span></a></li>
                <li><a id="socialLink" href="#"><span>Social</span></a></li>
            </ul>
         </header>
@@ -20,13 +20,10 @@
             <a href="mailto:epwalsh77@gmail.com" target="_blank"><img src="images/email.png" class="socialMediaImg"></a>
         </div>
             <h3> Hello, My name is Edward Walsh.<br/>I am a front end developer</h3>
-            
-            <img id="mainPhoto" src="images/me3.jpg">
-                
+            <img id="mainPhoto" src="images/me3.jpg">         
     </div>
         <div id="portfolio">
             <h3>Portfolio</h3>
-
         </div>
         <script src="work.js"></script>
     <footer>
